<resources>
    <string name="app_name">Challenger</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="welcome_to_challenger">Welcome to Challenger</string>
    <string name="sign_in_or_create_an_account">Sign in or create an account</string>
    <string name="create_an_account">Create an account</string>
    <string name="stop">Stop</string>
    <string name="skip">Skip</string>
    <string name="username">username</string>
    <string name="record_activity">Record activity</string>
    <string name="create_a_challenge">Create a challenge</string>
    <string name="choose_a_challenge">Choose a challenge!</string>
    <string name="title_activity_challenge_recorder">Map</string>
    <string name="start">Start</string>
    <string name="location_updated">location updated</string>
    <string name="remove_location_updates">Stop</string>
    <string name="launch_activity" translatable="false">Launch activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="pause">Pause</string>
    <string name="_0_0_km_h" translatable="false">0.0 km/h</string>
    <string name="_0_0_km" translatable="false">0.0 km</string>
    <string name="save">save</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="running">running</string>
    <string name="name">Name</string>
    <string name="distance">Distance</string>
    <string name="avgspeed">Avg speed</string>
    <string name="duration">duration</string>
    <string name="max_speed">max Speed</string>
    <string name="show_more">show more</string>
    <string name="km" translatable="false">km</string>
    <string name="km_h" translatable="false">km/h</string>
    <string name="challenge_recording">Challenge Recording</string>
    <string name="_1_minute" translatable="false">+1 minute</string>
    <string name="finish">Finish</string>
    <string name="update">Update</string>
    <string name="update_challenge">Update challenge</string>
    <string name="challenge_this_activity">Challenge this activity</string>
    <string name="hi_user">Hi user!</string>
    <string name="_0" translatable="false">0</string>
    <string name="total_km">Total km</string>
    <string name="profile_icon" translatable="false">profile icon</string>
    <string name="cycling">cycling</string>
    <string name="choose_an_activity">choose an activity:</string>
    <string name="activity_type" translatable="false">activity type</string>
    <string name="details">Details</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_2">Forgot password</string>
    <string name="reset_password">Reset password</string>
    <string name="sign_out">Sign-out</string>
    <string name="settings_icon" translatable="false">settings icon</string>
    <string name="update_your_profile">Settings</string>
    <string name="update_profile">Update profile</string>
    <string name="avg_pace">avg pace</string>
    <string name="_0_00_min_km" translatable="false">0:00 min/km</string>
    <string name="elevation_gained">elev. gain</string>
    <string name="elevation_lost">elev. loss</string>
    <string name="show_charts">show charts</string>
    <string-array name="activity_types">
        <item>cycling</item>
        <item>running</item>
    </string-array>
    <string name="title_activity_chart_details" translatable="false">ChartDetailsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="map">Map</string>
    <string name="table">Table</string>
    <string name="chart">Chart</string>
    <string name="auto_pause">Auto pause</string>
    <string name="add_a_name">Name your activity</string>
    <string name="it_s_empty_here_let_s_do_some_sports">It\'s empty here, let\'s do some sports!</string>
    <string name="no_date_added">No date added</string>
    <string name="or_take_a_tour_inside_the_app_at_first">Or take a tour inside the app at first</string>
    <string name="take_a_tour">Take a tour</string>
    <string name="discard">Discard</string>
    <string name="choose_an_item">Choose an item</string>
    <string name="voice_coach_details">You can choose here when the voice coach is telling you your activity details</string>
    <string name="turn_off">Turn off</string>
    <string name="minute">Minute</string>
    <string-array name="voice_coach_items">
        <item>1 km</item>
        <item>3 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>1 minute</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>20 minutes</item>
    </string-array>
    <string name="set_up_voice_coach">Set up voice coach</string>
    <string name="hey">Hey</string>
    <string name="add_your_weight">Add your weight</string>
    <string name="add_your_height">Add your height</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="your_bmi">Your BMI index is:</string>
    <string name="normal">Normal</string>
    <string name="underweight">underweight</string>
    <string name="overweight">Overweight</string>
    <string name="obese">Obese</string>
    <string name="hi">Hi!</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="average_speed">Average speed</string>
    <string name="difference_error">Can\'t calculate difference</string>
    <string name="update_success">Your profile was updated successfully!</string>
    <string name="are_you_sure_to_discard">Are you sure that you want to discard this challenge? This cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="discard_challenge">Discard challenge</string>
    <string name="no">No</string>
    <string name="this_cannot_be_saved">Unfortunately, this activity can\'t be saved, but you can start it again if you would like to</string>
    <string name="already_finished">Already finished?</string>
    <string name="airplane_mode_text">Unfortunately, you can\'t record an activity, if Airplane mode is turned on</string>
    <string name="airplane_is_on">Airplane mode is turned on</string>
    <string name="no_gps">No GPS</string>
    <string name="no_gps_text_weather">Your GPS seems to be disabled, please enable it to let Challenger fetching weather data</string>
    <string name="no_gps_text">Your GPS seems to be disabled, please enable it</string>
    <string name="ok">Ok</string>
    <string name="record_activity_showcase_text">Here, you can start recording a new activity.
        You can choose between running and cycling as you wish. During recording, a Voice Coach can help
        you to monitor your performance. You can choose Auto Pause as well. In this case, the
        recording will pause automatically when your speed is zero.</string>
    <string name="got_it">Got it!</string>
    <string name="let_s_do_it">"Let\'s do it!</string>
    <string name="create_challenge_showcase_text">
        We know that you love challenging yourself! With this feature, you can do it! You can set the desired distance and duration,
        Challenger will calculate your average speed automatically. After setting the fields, you can
        start the challenge and Challenger will help you to keep the pace by updating the difference in
        every 30 seconds. The Voice Coach can tell you if your pace is good enough, or you should hurry up a little bit.
        Auto Pause is also available here, so you won\'t lose a single second!
    </string>
    <string name="set_up_cadence_sensor">Set up cadence sensor</string>
    <string name="ble_not_supported">Sorry, but your device doesn\'t support BLE technology</string>
    <string name="item">item</string>
    <string name="unknown_device">Unknown device</string>
    <string name="speed">speed</string>
    <string name="elevation">Elevation</string>
    <string name="finish_challenge">Finish recording</string>
    <string name="finish_recording_message">Do you want to finish recording?</string>
    <string name="cancel">Cancel</string>
    <string name="prevent_screen_lock">Prevent screen lock</string>
    <string name="no_internet_connection_will_update">No internet connection. Challenger will download data as soon as connected to the internet.</string>
    <string name="voice_coach_settings">Voice coach settings</string>
    <string name="ride_settings">Ride settings</string>
    <string name="start_stop_pause">Start, Stop, Pause</string>
    <string name="difference">Difference</string>
    <string name="last_update_warning">Your feed is up-to-date</string>
    <string name="altitude">Altitude</string>
    <string name="_0m" translatable="false">0m</string>
    <string name="create">Create</string>
    <string name="record">Record</string>
    <string name="have_an_account_log_in">Have an account? Log in</string>
    <string name="body_fat_calculator">Body fat and BMI calculator</string>
    <string name="calculate">Calculate</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="waistfemale">Waist (at narrowest)</string>
    <string name="hipfemale">Hip (at widest)</string>
    <string name="waistmale">Waist (at navel)</string>
    <string name="neck_at_narrowest">Neck (at narrowest)</string>
    <string name="calculate_body_fat">Calculate body fat</string>
    <string name="waist">Waist</string>
    <string name="hip">Hip</string>
    <string name="your_body_fat_is">Your body fat is:</string>
    <string name="not_calculated">Not calculated</string>
    <string name="essential_fat">Essential fat</string>
    <string name="athletic">Athletic</string>
    <string name="fit">Fit</string>
    <string name="acceptable">Acceptable</string>
    <string name="please_wait">Please wait a second, your data is being fetched</string>
    <string name="save_ok">Challenge saved successfully!</string>
    <string name="cant_save">Can\'t save challenge, something happened</string>
    <string name="please_name_challenge">Please name the challenge!</string>
    <string name="back_to_recording">Back to recording</string>
    <string name="neck">Neck</string>
    <string name="share">share</string>
    <string name="invalid_email">Please provide a valid email address</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="successful_sign_up">Successful sign-up</string>
    <string name="unsuccessful_sing_up">Unsuccessful sign-up</string>
    <string name="cant_send_email">Can\'t send email, make sure your email address is valid</string>
    <string name="email_sent">Email sent!</string>
    <string name="sing_in_failed">Sign-in failed</string>
    <string name="successful_login">Successful login!</string>
    <string name="please_fill_required_fields">Please fill the required fields</string>
    <string name="height_in_cm">height in cm</string>
    <string name="weight_in_kg">Weight in kg</string>
    <string name="this_year">This year</string>
    <string name="title_activity_main2" translatable="false">MainActivity</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="weather">Weather</string>
    <string name="weather_alert">Weather alert</string>
    <string name="high_uv_alert">The UV index is dangerous, you can get sunburned within a few minutes! Wear something light to protect your skin and use suncream! Please notice that on your bike you can underestimate the power of sun.</string>
    <string name="google_sign_in">Google sign in</string>
</resources>