<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".user.UserSettingsActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/update_your_profile"
        android:textAllCaps="true"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/updateProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_edittext"
        android:text="@string/update_profile"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:autofillHints="none"
            android:background="@drawable/round_edittext"
            android:backgroundTint="@color/colorLightOpacity"
            android:drawableStart="@drawable/ic_account_white"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:text="@string/username"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/round_edittext"
            android:backgroundTint="@color/colorLightOpacity"
            android:drawableStart="@drawable/ic_email_white"
            android:ems="10"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:text="@string/email_address"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp">


            <EditText
                android:id="@+id/weightEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_edittext"
                android:backgroundTint="@color/colorLightOpacity"
                android:drawableStart="@drawable/fitness_center_24px"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/weight"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/heightEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_edittext"
                android:backgroundTint="@color/colorLightOpacity"
                android:drawableStart="@drawable/height_24px"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/height"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/preventScreenLockCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#FFFFFF"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:text="@string/prevent_screen_lock" />

            <CheckBox
                android:id="@+id/autoPauseCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:buttonTint="#FFFFFF"
                android:text="@string/auto_pause" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/bmiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="20"
        android:textAllCaps="true"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView15" />

    <TextView
        android:id="@+id/bmiInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/normal"
        android:textAllCaps="true"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bmiTextView" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="0dp"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:layout_marginStart="0dp"
        android:text="@string/your_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/noInternetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="20dp"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:text="@string/no_internet_connection"
        android:background="@drawable/round_edittext"
        android:backgroundTint="@color/colorPlus"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>