<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:backgroundTint="@android:color/white"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dialogImageView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:src="@drawable/uv_alert"
            app:tint="@color/colorStop" />

        <TextView
            android:id="@+id/dialogTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_alert"
            style="@style/Headline4"
            android:textColor="@color/colorDarkBlue"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/dialogDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_height="wrap_content"
            android:text="@string/high_uv_alert"
            android:textColor="@color/colorDarkBlue"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/dialogCancelButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:background="@drawable/round_16dp"
                android:backgroundTint="@color/colorDarkBlue"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp" />

            <Space
                android:id="@+id/dialogButtonSpace"
                android:layout_width="12dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/dialogOkButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:background="@drawable/round_16dp"
                android:backgroundTint="@color/colorDarkBlue"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>